--- a/disaster/package.json
+++ b/disaster/package.json
@@ -14,8 +14,10 @@
   },
   "dependencies": {
     "@expo/samples": "2.1.1",
+    "create-react-native-app": "^1.0.0",
+    "eslint": "^5.2.0",
     "expo": "29.0.0",
-    "react": "16.3.1",
+    "react": "^16.3.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-29.0.0.tar.gz",
     "react-navigation": "^2.9.3"
   },
